--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8">
-    <title>김희연</title>
+    <title>무작위 번호 추출기</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
   </head>
