--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TAEHYUNG</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <script type="text/javascript" src="js/script.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css"/>
+  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 </head>
 <body>
-    <div id="main"><a href="index.html">TAEHYUNG</a></div>
+  <!-- 메인로고 -->
+  <div id="main"><a href="index.html">TAEHYUNG</a></div> 
+  
+  <!-- 마우스 포인터 따라다니는 원 -->
+  <div id="mouseCircle"></div>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
