--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TAEHYUNG</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css"/>
-  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>돌려 돌려 돌림판~!!</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <!-- 메인로고 -->
-  <div id="main"><a href="index.html">TAEHYUNG</a></div> 
-  
-  <!-- 마우스 포인터 따라다니는 원 -->
-  <div id="mouseCircle"></div>
-  <script type="text/javascript" src="js/script.js"></script>
+    <div id="container">
+        <canvas width="600" height='600'></canvas>  
+        <button onclick="rotate()">원판 돌리기</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
